* Made numpad locale aware
* Selection widget used for many2one dynamically change their content following
  the domain specification
* Add open button on binary and image widgets
* Hide buttons on image widget if readonly
* Added a connection manager à la gajim
* Fix warning in wizards
* Added possibility to use server-side icons
* Added additional gtk.Entry for filename on BinaryField
* Display deleted lines in One2Many and Many2Many
* Handle URL
* Add communication between boards
* Added domain inversion feature
* Handle loading attribute on fields
* Use default format for value in wizard form
* Add One2One field

Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)
* More fully integrate GTK menubar for Mac OS
* Allow to configure search limit
* Add Previous/Next on list view
* Set non-applicable form controls in one2many view to be insensitive

Version 1.6.0 - 2010-05-08
* Bug fixes (see mercurial logs for details)
* Don't stop wizard execution when exception occurs
* Use ir.attachment view instead of a custom one
* Add fingerprint and CA check for SSL connection
* Use lazy load in Import/Export windows
* Validate record before switching view
* Refactoring:
    * Better naming in model
    * Group extends list
    * Add an index to Group
    * New common windows for dialog of many2one, one2many and many2many
    * one2many and many2many dialog use the same screen than the widget
    * Reduce the number of option in Screen
    * Remove RPCProxy to handle logout exception on every server call
    * Better naming of event signals
    * Fix on_change detection for many2many for issue1400
* Add PySON to replace python string evaluation
* Don't show "Spell Checking" option if gtkspell is not present
* Use the same internal model for many2many and one2many fields
* Remove egenix-mx-base and replace it by python-dateutil
* Add cache to safe_eval
* Use versioned configuration directory
* Next and Previous scroll per page on list and don't loop