@@ -39,8 +39,6 @@ class CharField(object):
             return
         if self.attrs.get('on_change', False):
             record.on_change(self.name, self.attrs['on_change'])
-        if self.attrs.get('change_default', False):
-            record.cond_default(self.attrs['name'], self.get(record))
         record.on_change_with(self.name)
 
     def domains_get(self, record):
